--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,20 +27,20 @@ dependencies:
   http: ^0.13.1
   google_fonts: ^2.0.0
   flutter_spinkit: ^5.0.0
-  charts_flutter: ^0.10.0
+  charts_flutter: ^0.11.0
   dotted_line: ^3.0.0
   shape_of_view: ^1.0.2
   cupertino_icons: ^1.0.0
-  velocity_x: ^2.6.1
-  flutter_svg: ^0.21.0+1 #helps us to use SVG
-  provider: ^5.0.0 #for state management
+  velocity_x: ^3.3.0
+  flutter_svg: ^0.23.0+1 #helps us to use SVG
+  provider: ^6.0.1 #for state management
   #geolocator: ^6.1.8
   #location_web: ^3.0.0
   location: ^4.1.1
   firebase_core: ^1.0.3
-  firebase_remote_config: ^0.10.0-dev.0
+  firebase_remote_config: ^0.11.0+2
   firebase_crashlytics: ^2.0.0
-  firebase_auth: ^1.0.1
+  firebase_auth: ^3.1.4
 
 
 dev_dependencies:
